[package]
name = "winkernl-rs"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "kernel mode function export library and inline hook kernel"
repository = "https://github.com/Niyka1/klib-rs"
documentation = "https://docs.rs/klib-rs"


[features]
default = ["bundled-wdk"]
wdk-auto = []
bundled-wdk = []

[dependencies]
iced-x86 = { version = "1.21.0", default-features = false, features = ["no_std", "decoder"] }
x86_64 = "=0.15.4"
[profile.release]
panic = "abort"


[build-dependencies]
winreg = "0.56.0"
bindgen = "0.72.1"